# simple-blog-authentication

./: .gitignore  README.md  docker-compose.yml  requirements.txt
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/blog/: celery.py  settings.py  urls.py
backend/core/: models.py
backend/core/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_managers_and_more.py
backend/playground/: urls.py
blog/: settings.py  urls.py
client/: Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: App.js  index.js
client/src/api/: auth.js  index.js
client/src/components/: Home.js  ListBuckets.js  ListObjects.js  Login.js
client/src/components/hooks/: index.js
client/src/components/layout/: Footer.js  Layout.js  Loading.css  Loading.js  MainNavigation.js  Navbar.js
client/src/components/users/: ActivationComponent.js  ActivationFailure.js  ForgotPasswordForm.js  LoginForm.css  LoginForm.js  RegisterForm.js  RegisteredSuccess.js  RegistrationForm.css  RegistrationForm.js  ResetPassword.js
client/src/pages/: AllBucketsPage.js  AllObjectsPage.js  BucketObjectsPage.js
core/: models.py  serializers.py
playground/: views.py
