[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Backend of blog"
authors = ["mohamedsaad308 <mohamedsaad308@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.7"
djangorestframework = "3.14.0"
django-filter = "23.4"
djoser = "2.2.2"
django-debug-toolbar = "4.2.0"
celery = "5.3.6"
redis = "5.0.1"
django-cors-headers = "4.3.1"
python-decouple = "3.8"
django-post-office = "^3.8.0"
mysql-connector-python = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
